--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "A PHP Implementation of the game Carcassonne.",
     "authors": [
         {
-            "name": "Nigel Hough",
-            "email": "nigel.hough@workplacesystems.com"
+            "name": "Nigel Hough, Tom Szuszai",
+            "email": "nigel.hough@workplacesystems.com, tom.szuszai@workplacesystems.com"
         }
     ],
     "require": {}
