Added negative test for create tile from string and added string face validation

--- a/tiles.ini
+++ b/tiles.ini
@@ -1,4 +1,4 @@
 #Game Tiles
-tiles[] = "CITY:ROAD:GRASS:ROAD:ROAD"
-tiles[] = "CITY:GRASS:GRASS:GRASS:GRASS"
-tiles[] = "GRASS:ROAD:GRASS:ROAD:ROAD"
+tiles[] = "C:R:G:R:R"
+tiles[] = "C:G:G:G:G"
+tiles[] = "G:R:G:R:R"
