--- a/tiles.ini
+++ b/tiles.ini
@@ -1,4 +1,7 @@
 #Game Tiles
 tiles[] = "C:R:G:R:R"
 tiles[] = "C:G:G:G:G"
-tiles[] = "G:R:G:R:R"
+tiles[] = "G:R:R:R:G"
+tiles[] = "C:C:C:C:C"
+tiles[] = "C:C:G:C:R"
+tiles[] = "R:G:R:G:R"
