Added more Tiles to base set

--- a/tiles.ini
+++ b/tiles.ini
@@ -5,3 +5,11 @@ tiles[] = "G:R:R:R:G"
 tiles[] = "C:C:C:C:C"
 tiles[] = "C:C:G:C:R"
 tiles[] = "R:G:R:G:R"
+tiles[] = "G:C:G:R:R"
+tiles[] = "G:G:G:C:G"
+tiles[] = "R:R:R:R:G"
+tiles[] = "R:R:R:R:R"
+tiles[] = "C:C:C:C:G"
+tiles[] = "R:R:C:G:R"
+tiles[] = "G:G:G:G:G"
+tiles[] = "G:R:G:R:R"
