Injected starting tile into Map

--- a/tiles.ini
+++ b/tiles.ini
@@ -1,7 +1,8 @@
 #Game Tiles
-tiles[] = "C:R:G:R:R"
 tiles[] = "C:G:G:G:G"
 tiles[] = "G:R:R:R:G"
 tiles[] = "C:C:C:C:C"
 tiles[] = "C:C:G:C:R"
 tiles[] = "R:G:R:G:R"
+#Starting Tile
+tiles[] = "C:R:G:R:R"
