--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-4": {"Codecassonne\\": "src/"}
