Add all base game tiles to tiles.ini

--- a/tiles.ini
+++ b/tiles.ini
@@ -1,4 +1,94 @@
-#Game Tiles
+# Base Game
+tiles[] = "C:C:C:C:C";
+
+tiles[] = "C:C:C:G:C";
+tiles[] = "C:C:C:G:C";
+tiles[] = "C:C:C:G:C";
+tiles[] = "C:C:C:G:C";
+
+tiles[] = "C:G:C:G:C";
+tiles[] = "C:G:C:G:C";
+tiles[] = "C:G:C:G:C";
+
+tiles[] = "C:C:G:G:C";
+tiles[] = "C:C:G:G:C";
+tiles[] = "C:C:G:G:C";
+tiles[] = "C:C:G:G:C";
+tiles[] = "C:C:G:G:C";
+
+tiles[] = "C:C:G:G:G";
+tiles[] = "C:C:G:G:G";
+
+tiles[] = "C:G:C:G:G";
+tiles[] = "C:G:C:G:G";
+tiles[] = "C:G:C:G:G";
+tiles[] = "C:G:C:G:G";
+
+tiles[] = "C:G:G:G:G";
+tiles[] = "C:G:G:G:G";
+tiles[] = "C:G:G:G:G";
+tiles[] = "C:G:G:G:G";
+tiles[] = "C:G:G:G:G";
+
+tiles[] = "C:C:C:R:C";
+tiles[] = "C:C:C:R:C";
+tiles[] = "C:C:C:R:C";
+
+tiles[] = "C:C:R:R:R";
+tiles[] = "C:C:R:R:R";
+tiles[] = "C:C:R:R:R";
+tiles[] = "C:C:R:R:R";
+tiles[] = "C:C:R:R:R";
+
+tiles[] = "G:G:G:R:G";
+tiles[] = "G:G:G:R:G";
+
+tiles[] = "C:R:R:G:R";
+tiles[] = "C:R:R:G:R";
+tiles[] = "C:R:R:G:R";
+
+tiles[] = "C:G:R:R:R";
+tiles[] = "C:G:R:R:R";
+tiles[] = "C:G:R:R:R";
+
+tiles[] = "C:R:R:R:R";
+tiles[] = "C:R:R:R:R";
+tiles[] = "C:R:R:R:R";
+
+tiles[] = "C:R:G:R:R";
+tiles[] = "C:R:G:R:R";
+tiles[] = "C:R:G:R:R";
+
+tiles[] = "R:R:R:R:R";
+
+tiles[] = "G:R:R:R:R";
+tiles[] = "G:R:R:R:R";
+tiles[] = "G:R:R:R:R";
+tiles[] = "G:R:R:R:R";
+
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+tiles[] = "R:G:R:G:R";
+
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+tiles[] = "G:G:R:R:R";
+
+tiles[] = "G:G:G:G:G";
+tiles[] = "G:G:G:G:G";
+tiles[] = "G:G:G:G:G";
+tiles[] = "G:G:G:G:G";
+
+# Starting Tile
 tiles[] = "C:R:G:R:R"
-tiles[] = "C:G:G:G:G"
-tiles[] = "G:R:G:R:R"
