Add Monastery/Cloister to possible tile types

--- a/tiles.ini
+++ b/tiles.ini
@@ -40,8 +40,8 @@ tiles[] = "C:C:R:R:R";
 tiles[] = "C:C:R:R:R";
 tiles[] = "C:C:R:R:R";
 
-tiles[] = "G:G:G:R:G";
-tiles[] = "G:G:G:R:G";
+tiles[] = "G:G:G:R:M";
+tiles[] = "G:G:G:R:M";
 
 tiles[] = "C:R:R:G:R";
 tiles[] = "C:R:R:G:R";
@@ -85,10 +85,10 @@ tiles[] = "G:G:R:R:R";
 tiles[] = "G:G:R:R:R";
 tiles[] = "G:G:R:R:R";
 
-tiles[] = "G:G:G:G:G";
-tiles[] = "G:G:G:G:G";
-tiles[] = "G:G:G:G:G";
-tiles[] = "G:G:G:G:G";
+tiles[] = "G:G:G:G:M";
+tiles[] = "G:G:G:G:M";
+tiles[] = "G:G:G:G:M";
+tiles[] = "G:G:G:G:M";
 
 # Starting Tile
 tiles[] = "C:R:G:R:R"
