Rename all images to match our tile naming convention + Update tiles.ini to be accurate for C:C:R:R:C tile

--- a/tiles.ini
+++ b/tiles.ini
@@ -34,11 +34,11 @@ tiles[] = "C:C:C:R:C";
 tiles[] = "C:C:C:R:C";
 tiles[] = "C:C:C:R:C";
 
-tiles[] = "C:C:R:R:R";
-tiles[] = "C:C:R:R:R";
-tiles[] = "C:C:R:R:R";
-tiles[] = "C:C:R:R:R";
-tiles[] = "C:C:R:R:R";
+tiles[] = "C:C:R:R:C";
+tiles[] = "C:C:R:R:C";
+tiles[] = "C:C:R:R:C";
+tiles[] = "C:C:R:R:C";
+tiles[] = "C:C:R:R:C";
 
 tiles[] = "G:G:G:R:M";
 tiles[] = "G:G:G:R:M";
