Add .sonar output dir to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ crashlytics-build.properties
 
 #Ignore PHPUnit Test Coverage Output
 /tests/coverage
+
+# Ingore SonarQube analysis output
+.sonar/
