Add badges for SonarQube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.projectVersion=0.0.1
 sonar.sources=.
 
 # Exclude vendor & build artefacts
-sonar.exclusions=vendor/**,build/**,tests/**
+sonar.exclusions=vendor/**,build/**,tests/**,etc/**
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
