--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,7 @@ php:
   - '7.0'
 
 before_script:
-    - composer install
+  - composer install
+
+script: 
+  - phpunit --configuration tests/phpunit.xml
