Updated Feature Factory to create simple two tile features

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "phpunit/phpunit": "^4.8"
     },
     "autoload": {
-        "psr-4": {"Codecassonne\\": "src/"}
+        "psr-4": {"Codecassonne\\": ["src/", "tests/"]}
     }
 }
