--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "phpstan/phpstan": "^0.6.3"
     },
     "autoload": {
-        "psr-4": {"Codecassonne\\": "src/"}
+        "psr-4": {"Codecassonne\\": ["src/", "tests/"]}
     }
 }
