--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_script:
   - composer install
 
 script: 
-  - phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
+  - vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
+  - vendor/bin/phpstan analyse src tests --level=4
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
