--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ php:
 before_script:
   - composer install
 
-script: 
+script:
+  - php build/scripts/linter.php
   - vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
   - vendor/bin/phpstan analyse src tests --level=4
 
