--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "phpunit/phpunit": "^6.0",
         "phpstan/phpstan": "^0.6.3",
-        "jakub-onderka/php-parallel-lint": "^0.9.2"
+        "jakub-onderka/php-parallel-lint": "^0.9.2",
+        "squizlabs/php_codesniffer": "^2.8"
     },
     "autoload": {
         "psr-4": {"Codecassonne\\": ["src/", "tests/"]}
