--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ script:
   - vendor/bin/parallel-lint --exclude vendor .
   - vendor/bin/phpunit --configuration tests/phpunit.xml --coverage-clover=coverage.xml
   - vendor/bin/phpstan analyse src --level=4
+  - vendor/bin/phpcs -p src
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
